--- a/src/components/dashboard/head-sidebar.css
+++ b/src/components/dashboard/head-sidebar.css
@@ -6,6 +6,10 @@
   justify-content: space-between;
   align-items: center;
   transition: all 0.3s ease; /* Smooth transition for theme changes */
+  width: 100%;
+  position:fixed;  /*position fixed */
+  z-index: 1000;  /* Ensure it stays above other elements */
+ 
 }
 .header-title {
   margin-left: 0; /* Ensure the title is aligned to the left */
@@ -22,6 +26,10 @@
   color: var(--text-color, black); /* Use theme variable */
   height: 100vh;
   transition: all 0.3s ease; /* Smooth transition for theme changes */
+  position: fixed;
+  z-index: 555;
+  overflow-y: auto;
+  top: 65px;  /* start below the header */
 }
 
 .sidebar .ant-menu {
@@ -53,7 +61,7 @@
   border: 1px solid rgb(201, 198, 198);
   padding: 4px 10px;
   border-radius: 6px;
-  justify-content: center;
+  
 }
 .todo{
   display: flex;
@@ -89,10 +97,8 @@
 
 /* Container for the list */
 .todo-list {
-  margin-top: 10px;
-  max-width: 400px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 5px;
+  max-width: auto;
 }
 
 /* List styling */
@@ -120,12 +126,42 @@
   color: rgb(41, 38, 38);
   border: none;
   padding: 4px 10px;
+  margin-right: 2px;
   border-radius: 4px;
   cursor: pointer;
   font-size: 14px;
   
 }
+.todo-list .editbtn button:hover {
+  background-color: #007bff;
+}
 
 .todo-list button:hover {
   background-color: #d9363e;
+}
+
+
+
+/* dashboard content area */
+/* content area */
+.dashboard-widgets {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-around;
+  background-color: var(--bg-color); /* Use theme background */
+  color: var(--text-color); /* Use theme text color */
+  padding: 20px;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+  margin-left: 190px;
+  margin-top: 50px;
+  overflow-y: auto;
+}
+.content {
+  margin-top: 50px;
+  margin-left: 180px;
+  padding: 2px;
+  overflow-y: auto; /* Enable vertical scrolling */
+  background-color: #ccb9b9; /* Optional background color */
 }
